--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 		</h2>
 
 		<div class="video-content">
-			<a href="#">
+			<a href="https://www.youtube.com/watch?v=PugKQZHPut8&list=PLHFlHpPjgk73nyVzwg2HMjXgBDH4BZvJ1&index=10">
 				<img src="images/leopard.png" alt="video" class="video-preview" />
 			</a>
-			<a href="#" class="btn btn-primary">Get Started </a>
+			<a href="https://www.apple.com/iphone-16-pro/" class="btn btn-primary">Get Started </a>
 
 		</div>
     </div>
